Add perfil image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="IMAGEN PHOTOS\Vladimir Escobar profile pictures-modified.png" alt="Vladimir profile"></td>
+      <td><img src="https://github.com/BLADIER80/CV/blob/main/Vladimir%20Escobar%20profile%20pictures-modified.png" alt="Vladimir profile"></td>
       <td>
         <h1>Vladimir Escobar Rojas</h1>
         <p><i>Web Development <strong>Student</strong>.</i></p>
